# printserver

./: .gitignore  Makefile  README.md  cliff.toml  pyproject.toml
.github/workflows/: dismiss-stale-approvals.yml  pr-title.yml  publish.yml
macOS/: com.shortstorybox.PrintServer.plist  distribution.xml
macOS/scripts/: postinstall  preinstall
printserver/: __init__.py  __main__.py  domains.py  index.py  print_job.py  printers.py
printserver/print_systems/: __init__.py  base.py  brother_ql.py  cups.py
