[project.urls]
Homepage = "https://github.com/shortstorybox/printserver"
Issues = "https://github.com/shortstorybox/printserver/issues"

[project]
name = "printserver"
version = "2.4.0"  # Updated by `make version-bump`
description = "The missing JavaScript Printer API"
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X"
]
dependencies = [
    "brother-ql>=0.9.4",
    "falcon>=4.0.2",
    "pdf2image>=1.17.0",
    "pillow>=11.1.0",
    "platformdirs>=4.3.7",
    "pycups>=2.0.4",
    "pyusb>=1.3.1",
    "requests>=2.32.3",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pyinstaller>=6.12.0",
    "ruff>=0.11.2",
    "twine>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
printserver = "printserver.__main__:main"
